scroll to selected elements in Source and SVGs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17834 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index.html
+++ b/Counterexample_Report/index.html
@@ -26,9 +26,9 @@
             <div id="middleLine" ng-mousedown="report.setMouseDown()"></div>
             <header>
                 <div class="btn-group">
-                    <button class="btn btn-success">Prev</button>
-                    <button class="btn btn-warning">Start</button>
-                    <button class="btn btn-success">Next</button>
+                    <button class="btn btn-success" ng-click="report.clickedErrpathButton($event)">Prev</button>
+                    <button class="btn btn-warning" ng-click="report.clickedErrpathButton($event)">Start</button>
+                    <button class="btn btn-success" ng-click="report.clickedErrpathButton($event)">Next</button>
                 </div>
             </header>
             <div class="fileContent">
@@ -4577,26 +4577,26 @@
 <pre id="statistics-36"></pre>
 <pre id="statistics-37">Number of path formula cache hits:   100 (24%)</pre>
 <pre id="statistics-38"></pre>
-<pre id="statistics-39">Time for post operator:                  0.090s</pre>
-<pre id="statistics-40">  Time for path formula creation:        0.087s</pre>
-<pre id="statistics-41">    Actual computation:                  0.157s</pre>
-<pre id="statistics-42">Time for strengthen operator:            0.111s</pre>
-<pre id="statistics-43">  Time for satisfiability checks:        0.109s</pre>
-<pre id="statistics-44">Time for prec operator:                  0.052s</pre>
-<pre id="statistics-45">  Time for abstraction:                  0.050s (Max:     0.029s, Count: 6)</pre>
-<pre id="statistics-46">    Boolean abstraction:                 0.016s</pre>
-<pre id="statistics-47">    Solving time:                        0.012s (Max:     0.010s)</pre>
+<pre id="statistics-39">Time for post operator:                  0.157s</pre>
+<pre id="statistics-40">  Time for path formula creation:        0.151s</pre>
+<pre id="statistics-41">    Actual computation:                  0.318s</pre>
+<pre id="statistics-42">Time for strengthen operator:            0.216s</pre>
+<pre id="statistics-43">  Time for satisfiability checks:        0.211s</pre>
+<pre id="statistics-44">Time for prec operator:                  0.093s</pre>
+<pre id="statistics-45">  Time for abstraction:                  0.086s (Max:     0.049s, Count: 6)</pre>
+<pre id="statistics-46">    Boolean abstraction:                 0.027s</pre>
+<pre id="statistics-47">    Solving time:                        0.018s (Max:     0.016s)</pre>
 <pre id="statistics-48">    Model enumeration time:              0.000s</pre>
-<pre id="statistics-49">    Time for BDD construction:           0.000s (Max:     0.000s)</pre>
+<pre id="statistics-49">    Time for BDD construction:           0.001s (Max:     0.001s)</pre>
 <pre id="statistics-50">Time for merge operator:                 0.000s</pre>
-<pre id="statistics-51">Time for coverage check:                 0.004s</pre>
-<pre id="statistics-52">  Time for BDD entailment checks:        0.004s</pre>
-<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.121s</pre>
+<pre id="statistics-51">Time for coverage check:                 0.005s</pre>
+<pre id="statistics-52">  Time for BDD entailment checks:        0.005s</pre>
+<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.228s</pre>
 <pre id="statistics-54"></pre>
 <pre id="statistics-55">Number of BDD nodes:                               202</pre>
 <pre id="statistics-56">Size of BDD node table:                            55949</pre>
 <pre id="statistics-57">Size of BDD cache:                                 5623</pre>
-<pre id="statistics-58">Size of BDD node cleanup queue:                           0 (count: 88, min: 0, max: 0, avg: 0,00)</pre>
+<pre id="statistics-58">Size of BDD node cleanup queue:                           5 (count: 88, min: 0, max: 5, avg: 0,06)</pre>
 <pre id="statistics-59">Time for BDD node cleanup:                             0.000s</pre>
 <pre id="statistics-60">Time for BDD garbage collection:                       0.000s (in 0 runs)</pre>
 <pre id="statistics-61"></pre>
@@ -4609,21 +4609,21 @@
 <pre id="statistics-68">AutomatonAnalysis (AssertionAutomaton) statistics</pre>
 <pre id="statistics-69">-------------------------------------------------</pre>
 <pre id="statistics-70">Number of states:                                  1</pre>
-<pre id="statistics-71">Total time for successor computation:                  0.024s</pre>
+<pre id="statistics-71">Total time for successor computation:                  0.037s</pre>
 <pre id="statistics-72">Automaton transfers with branching:                0</pre>
 <pre id="statistics-73">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-74"></pre>
 <pre id="statistics-75">AutomatonAnalysis (ErrorLabelAutomaton) statistics</pre>
 <pre id="statistics-76">--------------------------------------------------</pre>
 <pre id="statistics-77">Number of states:                                  1</pre>
-<pre id="statistics-78">Total time for successor computation:                  0.011s</pre>
+<pre id="statistics-78">Total time for successor computation:                  0.017s</pre>
 <pre id="statistics-79">Automaton transfers with branching:                0</pre>
 <pre id="statistics-80">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-81"></pre>
 <pre id="statistics-82">AutomatonAnalysis (TerminatingFunctions) statistics</pre>
 <pre id="statistics-83">---------------------------------------------------</pre>
 <pre id="statistics-84">Number of states:                                  1</pre>
-<pre id="statistics-85">Total time for successor computation:                  0.010s</pre>
+<pre id="statistics-85">Total time for successor computation:                  0.022s</pre>
 <pre id="statistics-86">Automaton transfers with branching:                0</pre>
 <pre id="statistics-87">Automaton transfer successors:                          760 (count: 763, min: 0, max: 1, avg: 1,00) [0 x 3, 1 x 760]</pre>
 <pre id="statistics-88"></pre>
@@ -4638,32 +4638,32 @@
 <pre id="statistics-97">Number of times stopped:         3</pre>
 <pre id="statistics-98">Number of times breaked:         3</pre>
 <pre id="statistics-99"></pre>
-<pre id="statistics-100">Total time for CPA algorithm:         0.361s (Max:     0.204s)</pre>
-<pre id="statistics-101">  Time for choose from waitlist:      0.002s</pre>
-<pre id="statistics-102">  Time for precision adjustment:      0.061s</pre>
-<pre id="statistics-103">  Time for transfer relation:         0.280s</pre>
-<pre id="statistics-104">  Time for merge operator:            0.000s</pre>
-<pre id="statistics-105">  Time for stop operator:             0.008s</pre>
-<pre id="statistics-106">  Time for adding to reached set:     0.004s</pre>
+<pre id="statistics-100">Total time for CPA algorithm:         0.644s (Max:     0.352s)</pre>
+<pre id="statistics-101">  Time for choose from waitlist:      0.003s</pre>
+<pre id="statistics-102">  Time for precision adjustment:      0.105s</pre>
+<pre id="statistics-103">  Time for transfer relation:         0.501s</pre>
+<pre id="statistics-104">  Time for merge operator:            0.001s</pre>
+<pre id="statistics-105">  Time for stop operator:             0.010s</pre>
+<pre id="statistics-106">  Time for adding to reached set:     0.009s</pre>
 <pre id="statistics-107"></pre>
 <pre id="statistics-108">Predicate-Abstraction Refiner statistics</pre>
 <pre id="statistics-109">----------------------------------------</pre>
 <pre id="statistics-110">Avg. length of target path (in blocks):                   6 (count: 3, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-111">Number of infeasible sliced prefixes:                     0 (count: 0, min: 0, max: 0, avg: 0,00)</pre>
 <pre id="statistics-112"></pre>
-<pre id="statistics-113">Time for refinement:                                   0.326s</pre>
-<pre id="statistics-114">  Counterexample analysis:                0.098s (Max:     0.044s, Calls: 3)</pre>
-<pre id="statistics-115">    Refinement sat check:                 0.053s</pre>
+<pre id="statistics-113">Time for refinement:                                   0.640s</pre>
+<pre id="statistics-114">  Counterexample analysis:                0.177s (Max:     0.087s, Calls: 3)</pre>
+<pre id="statistics-115">    Refinement sat check:                 0.094s</pre>
 <pre id="statistics-116">    Interpolant computation:              0.000s</pre>
 <pre id="statistics-117">  Error path post-processing:                          0.000s</pre>
 <pre id="statistics-118">  Path-formulas extraction:                            0.000s</pre>
-<pre id="statistics-119">  Building the counterexample trace:                   0.098s</pre>
-<pre id="statistics-120">  Extracting precise counterexample:                   0.190s</pre>
+<pre id="statistics-119">  Building the counterexample trace:                   0.177s</pre>
+<pre id="statistics-120">  Extracting precise counterexample:                   0.395s</pre>
 <pre id="statistics-121">  Extracting infeasible sliced prefixes:               0.000s</pre>
 <pre id="statistics-122">  Selecting infeasible sliced prefixes:                0.000s</pre>
-<pre id="statistics-123">  Predicate creation:                                  0.001s</pre>
-<pre id="statistics-124">  Precision update:                                    0.002s</pre>
-<pre id="statistics-125">  ARG update:                                          0.004s</pre>
+<pre id="statistics-123">  Predicate creation:                                  0.000s</pre>
+<pre id="statistics-124">  Precision update:                                    0.004s</pre>
+<pre id="statistics-125">  ARG update:                                          0.007s</pre>
 <pre id="statistics-126"></pre>
 <pre id="statistics-127">Length of refined path (in blocks):                       2 (count: 1, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-128">Number of affected states:                                1 (count: 1, min: 1, max: 1, avg: 1,00)</pre>
@@ -4686,16 +4686,16 @@
 <pre id="statistics-145">Avg. size of reached set before ref.: 51.00</pre>
 <pre id="statistics-146">Avg. size of reached set after ref.:  3.00</pre>
 <pre id="statistics-147"></pre>
-<pre id="statistics-148">Total time for CEGAR algorithm:       0.698s</pre>
-<pre id="statistics-149">Time for refinements:                 0.337s</pre>
-<pre id="statistics-150">Average time for refinement:          0.112s</pre>
-<pre id="statistics-151">Max time for refinement:              0.238s</pre>
+<pre id="statistics-148">Total time for CEGAR algorithm:       1.302s</pre>
+<pre id="statistics-149">Time for refinements:                 0.658s</pre>
+<pre id="statistics-150">Average time for refinement:          0.219s</pre>
+<pre id="statistics-151">Max time for refinement:              0.493s</pre>
 <pre id="statistics-152"></pre>
 <pre id="statistics-153">Counterexample-Check Algorithm statistics</pre>
 <pre id="statistics-154">-----------------------------------------</pre>
 <pre id="statistics-155">Number of counterexample checks:    1</pre>
 <pre id="statistics-156">Number of infeasible paths:         0 (0%)</pre>
-<pre id="statistics-157">Time for counterexample checks:         0.393s</pre>
+<pre id="statistics-157">Time for counterexample checks:         0.650s</pre>
 <pre id="statistics-158"></pre>
 <pre id="statistics-159">Code Coverage</pre>
 <pre id="statistics-160">-----------------------------</pre>
@@ -4725,29 +4725,29 @@
 <pre id="statistics-184">  Number of target states:       1</pre>
 <pre id="statistics-185">  Size of final wait list        2</pre>
 <pre id="statistics-186"></pre>
-<pre id="statistics-187">Time for analysis setup:          2.331s</pre>
-<pre id="statistics-188">  Time for loading CPAs:          0.783s</pre>
-<pre id="statistics-189">  Time for loading parser:        0.574s</pre>
-<pre id="statistics-190">  Time for CFA construction:      0.893s</pre>
-<pre id="statistics-191">    Time for parsing file(s):     0.362s</pre>
-<pre id="statistics-192">    Time for AST to CFA:          0.234s</pre>
-<pre id="statistics-193">    Time for CFA sanity check:    0.041s</pre>
-<pre id="statistics-194">    Time for post-processing:     0.196s</pre>
+<pre id="statistics-187">Time for analysis setup:          4.230s</pre>
+<pre id="statistics-188">  Time for loading CPAs:          1.218s</pre>
+<pre id="statistics-189">  Time for loading parser:        1.132s</pre>
+<pre id="statistics-190">  Time for CFA construction:      1.732s</pre>
+<pre id="statistics-191">    Time for parsing file(s):     0.638s</pre>
+<pre id="statistics-192">    Time for AST to CFA:          0.505s</pre>
+<pre id="statistics-193">    Time for CFA sanity check:    0.064s</pre>
+<pre id="statistics-194">    Time for post-processing:     0.372s</pre>
 <pre id="statistics-195">      Time for var class.:        0.000s</pre>
-<pre id="statistics-196">    Time for CFA export:          0.467s</pre>
-<pre id="statistics-197">Time for Analysis:                1.091s</pre>
-<pre id="statistics-198">CPU time for analysis:            1.940s</pre>
-<pre id="statistics-199">Total time for CPAchecker:        3.427s</pre>
-<pre id="statistics-200">Total CPU time for CPAchecker:    7.300s</pre>
+<pre id="statistics-196">    Time for CFA export:          0.730s</pre>
+<pre id="statistics-197">Time for Analysis:                1.954s</pre>
+<pre id="statistics-198">CPU time for analysis:            2.880s</pre>
+<pre id="statistics-199">Total time for CPAchecker:        6.194s</pre>
+<pre id="statistics-200">Total CPU time for CPAchecker:    9.390s</pre>
 <pre id="statistics-201"></pre>
-<pre id="statistics-202">Time for Garbage Collector:       0.051s (in 5 runs)</pre>
+<pre id="statistics-202">Time for Garbage Collector:       0.139s (in 5 runs)</pre>
 <pre id="statistics-203">Garbage Collector(s) used:    PS MarkSweep, PS Scavenge</pre>
-<pre id="statistics-204">Used heap memory:                 80MB (    76 MiB) max;     35MB (    34 MiB) avg;     88MB (    84 MiB) peak</pre>
+<pre id="statistics-204">Used heap memory:                 81MB (    77 MiB) max;     36MB (    35 MiB) avg;     89MB (    85 MiB) peak</pre>
 <pre id="statistics-205">Used non-heap memory:             23MB (    22 MiB) max;     16MB (    15 MiB) avg;     23MB (    22 MiB) peak</pre>
-<pre id="statistics-206">Used in PS Old Gen pool:          21MB (    20 MiB) max;     10MB (    10 MiB) avg;     21MB (    20 MiB) peak</pre>
-<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     89MB (    85 MiB) avg</pre>
+<pre id="statistics-206">Used in PS Old Gen pool:          22MB (    21 MiB) max;     10MB (    10 MiB) avg;     22MB (    21 MiB) peak</pre>
+<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     88MB (    84 MiB) avg</pre>
 <pre id="statistics-208">Allocated non-heap memory:        24MB (    23 MiB) max;     24MB (    23 MiB) avg</pre>
-<pre id="statistics-209">Total process virtual memory:   2755MB (  2627 MiB) max;   2725MB (  2599 MiB) avg</pre>
+<pre id="statistics-209">Total process virtual memory:   2755MB (  2627 MiB) max;   2722MB (  2595 MiB) avg</pre>
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(6)">
 <p>No Config-File available</p>            </div>
