add new key 'valString to each ErrorpathElement and show it when clicked on source-node-number in Errorpath, fix that node and edge can be marked at the same time in CFA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17860 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -33,9 +33,9 @@
             </header>
             <div class="fileContent">
                 <table id="err_table">
-                    <tr id="errpath-{{$index}}" ng-click="report.clickedErrpathElement($event)" ng-repeat="line in report.errorPathData">
-                        <td><pre>{{line.source}}</pre></td>
-                        <td><pre>{{line.desc}}</pre></td>
+                    <tr id="errpath-{{$index}}" ng-repeat="line in report.errorPathData">
+                        <td ng-click="report.showValues($event)" data-toggle="popover" data-placement="right" data-trigger="click" data-content="{{line.valString}}"><pre>{{line.source}}</pre></td>
+                        <td ng-click="report.clickedErrpathElement($event)"><pre>{{line.desc}}</pre></td>
                     </tr>
                 </table>
             </div>
@@ -78,7 +78,7 @@
                     <!--CFAFUNCTIONGRAPHS-->
                 </div>
             </div>
-            <div class="fileContent" ng-show="report.tabIsSet(2)">
+            <div class="fileContent argContent" ng-show="report.tabIsSet(2)">
                 <!--ARGGRAPHS-->
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(3)">
