fixed the bugs from the last commit, implemented svg-zoom for CFAs (TODO: clear zoom when cfa-graph is changed)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17870 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index.html
+++ b/Counterexample_Report/index.html
@@ -85,6 +85,9 @@
                         </ul>
                     </div>
                     <label>{{report.functions[report.selectedCFAFunction]}}</label>
+                    <div>
+                        <input id="cfa-scalingField" type="number" min="0" max="200" ng-model="report.zoomFactor" ng-change="report.setZoom()"/>
+                    </div>
                 </div>
                 <div class="cfaContent">
 <svg  ng-show = "report.cfaFunctionIsSet(0)" width="2384pt" height="129pt"
