--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -14,82 +14,89 @@
     <title>CPAchecker Report</title>
 </head>
 <body ng-controller="ReportController as report" onload="prettyPrint(); init()">
-    <header class="header">
+<header class="header">
 
-        <h3><img ng-src="{{report.logo}}"/> Report</h3>
+    <h3><img ng-src="{{report.logo}}"/> Report</h3>
 
-        <em> Generated: {{report.date | date:'yyyy-MM-dd HH:mm:ss'}}</em>
-    </header>
+    <em> Generated: {{report.date | date:'yyyy-MM-dd HH:mm:ss'}}</em>
+</header>
 
-    <div class="sections" ng-mousemove="report.setWidth($event)" ng-mouseup="report.setMouseUp()">
-        <section id="errorpath_section">
-            <div id="middleLine" ng-mousedown="report.setMouseDown()"></div>
-            <header>
-                <div class="btn-group">
-                    <button class="btn btn-success" ng-click="report.clickedErrpathButton($event)">Prev</button>
-                    <button class="btn btn-warning" ng-click="report.clickedErrpathButton($event)">Start</button>
-                    <button class="btn btn-success" ng-click="report.clickedErrpathButton($event)">Next</button>
-                </div>
-                <div class="input-group input-group-sm">
-                    <input type="text" class="form-control" placeholder="Search for...">
+<div class="sections" ng-mousemove="report.setWidth($event)" ng-mouseup="report.setMouseUp()">
+    <section id="errorpath_section">
+        <div id="middleLine" ng-mousedown="report.setMouseDown()"></div>
+        <header>
+            <div class="btn-group">
+                <button class="btn btn-success" ng-click="report.clickedErrpathButton($event)">Prev</button>
+                <button class="btn btn-warning" ng-click="report.clickedErrpathButton($event)">Start</button>
+                <button class="btn btn-success" ng-click="report.clickedErrpathButton($event)">Next</button>
+            </div>
+            <button data-toggle="popover" data-placement="right" data-trigger="click" data-content="{{report.help_errorpath}}" class="btn btn-default btn-lg help_button" type="button">
+                <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+            </button>
+            <div class="input-group input-group-sm">
+                <input type="text" class="form-control search-input" placeholder="Search for...">
                     <span class="input-group-btn">
                         <button ng-click="report.searchFor()" class="btn btn-default" type="button">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                         </button>
                     </span>
-                </div>
-                <div>
-                    <p class="markedValues">Matches in "values": {{report.numOfValueMatches}}</p>
-                    <p class="markedDescriptions">Matches in "description": {{report.numOfDescriptionMatches}}</p>
-                </div>
-            </header>
-            <div class="fileContent">
-                <table id="err_table">
-                    <tr id="errpath-{{$index}}" ng-repeat="line in report.errorPathData">
-                        <td ng-click="report.showValues($event)" data-toggle="popover" data-placement="right" data-trigger="click" data-content="{{line.valString}}"><pre>{{line.source}}</pre></td>
-                        <td ng-click="report.clickedErrpathElement($event)"><pre>{{line.desc}}</pre></td>
-                    </tr>
-                </table>
             </div>
-        </section>
-        <section id="externalFiles_section">
-            <ul class="nav nav-pills">
-                <li ng-class="{active: report.tabIsSet(1)}">
-                    <a href ng-click="report.setTab(1)">CFA</a>
-                </li>
-                <li ng-class="{active: report.tabIsSet(2)}">
-                    <a href ng-click="report.setTab(2)">ARG</a>
-                </li>
-                <li ng-class="{active: report.tabIsSet(3)}">
-                    <a href ng-click="report.setTab(3)">Source</a>
-                </li>
-                <li ng-class="{active: report.tabIsSet(4)}">
-                    <a href ng-click="report.setTab(4)">Log</a>
-                </li>
-                <li ng-class="{active: report.tabIsSet(5)}">
-                    <a href ng-click="report.setTab(5)">Statistics</a>
-                </li>
-                <li ng-class="{active: report.tabIsSet(6)}">
-                    <a href ng-click="report.setTab(6)">Configurations</a>
-                </li>
-            </ul>
-            <div class="fileContent" ng-show="report.tabIsSet(1)">
-                <div class="dropdown-line">
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Displayed CFA
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li ng-repeat="func in report.functions"><a ng-click="report.setCFAFunction($index)">{{func}}</a></li>
-                        </ul>
-                    </div>
-                    <label>{{report.functions[report.selectedCFAFunction]}}</label>
-                    <div>
-                        <input id="cfa-scalingField" type="number" min="0" max="200" value="100" ngchange="report.setZoom()">
-                    </div>
+            <div>
+                <p class="markedValues">Matches in 'values': {{report.numOfValueMatches}}</p>
+                <p class="markedDescriptions">Matches in 'description': {{report.numOfDescriptionMatches}}</p>
+            </div>
+        </header>
+        <div class="fileContent">
+            <table id="err_table">
+                <tr id="errpath-{{$index}}" ng-repeat="line in report.errorPathData">
+                    <td ng-click="report.showValues($event)" data-toggle="popover" data-placement="right" data-trigger="click" data-content="{{line.valString}}"><pre>{{line.source}}</pre></td>
+                    <td ng-click="report.clickedErrpathElement($event)"><pre>{{line.desc}}</pre></td>
+                </tr>
+            </table>
+        </div>
+    </section>
+    <section id="externalFiles_section">
+        <ul class="nav nav-pills">
+            <li ng-class="{active: report.tabIsSet(1)}">
+                <a href ng-click="report.setTab(1)">CFA</a>
+            </li>
+            <li ng-class="{active: report.tabIsSet(2)}">
+                <a href ng-click="report.setTab(2)">ARG</a>
+            </li>
+            <li ng-class="{active: report.tabIsSet(3)}">
+                <a href ng-click="report.setTab(3)">Source</a>
+            </li>
+            <li ng-class="{active: report.tabIsSet(4)}">
+                <a href ng-click="report.setTab(4)">Log</a>
+            </li>
+            <li ng-class="{active: report.tabIsSet(5)}">
+                <a href ng-click="report.setTab(5)">Statistics</a>
+            </li>
+            <li ng-class="{active: report.tabIsSet(6)}">
+                <a href ng-click="report.setTab(6)">Configurations</a>
+            </li>
+            <button data-toggle="popover" data-placement="left" data-trigger="click" data-content="{{report.help_externalFiles}}" class="btn btn-default btn-lg help_button" type="button">
+                <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+            </button>
+        </ul>
+        <div class="fileContent" ng-show="report.tabIsSet(1)">
+            <div class="edit-line">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Displayed CFA
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li ng-repeat="func in report.functions"><a ng-click="report.setCFAFunction($index)">{{func}}</a></li>
+                    </ul>
                 </div>
-                <div class="cfaContent">
+                <label>{{report.functions[report.selectedCFAFunction]}}</label>
+                <div>
+                    <p>Zoom Factor (%)</p>
+                    <input id="cfa-scalingField" type="number" min="0" max="200" ng-model="report.zoomFactor" ng-change="report.setZoom('cfa-scalingField')"/>
+                </div>
+            </div>
+            <div class="cfaContent">
                     <!--CFAFUNCTIONGRAPHS-->
                 </div>
             </div>
